After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 580357 - Enabling 'Show seconds' causes excessive disk reads
Enabling 'Show seconds' causes excessive disk reads
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: clock
2.24.x
Other All
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-04-27 01:54 UTC by Gaspar
Modified: 2010-01-14 01:52 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24



Description Gaspar 2009-04-27 01:54:01 UTC
Please describe the problem:
If you turn on option 'Show seconds' on clock applet, it will cause disk reads every several seconds, which can be very annoying on laptops.

This also prevents HDD go to power save mode.

Steps to reproduce:
1. install and run iotop package
2. turn on 'Show seconds' option  
3. look that every 5-6 seconds gnome-panel apperas on the fisrt row with readin something small(3.7-7kb).
4. hear to HDD clicks every time :)


Actual results:
It accesses disk more frequently, than necessary.

Expected results:
I would prefer to have less frequent access times (or make it somehow configurable, to slow down on laptops)

Does this happen every time?
yes

Other information:
running strace shows that it monitors /etc/sysconfig and /etc/conf.d directories for some changes

something like 
strace -p XXXXX -o "| grep -v 'select\|read\|gettimeofday\|writev\|futex\|poll'"

replace XXXXX with pid of gnome-panel process.
Comment 1 Vincent Untz 2010-01-14 01:52:08 UTC
(In reply to comment #0)
> Other information:
> running strace shows that it monitors /etc/sysconfig and /etc/conf.d
> directories for some changes

I've fixed this in git now.

Note that it's not related to the "show seconds" setting, though.