[clock] Avoid unnecessary wakeups when monitoring non-existing files

If the parent directory of a timezone-related file doesn't exist on the
system, then it means the file is not useful to determine the timezone
on this system.

Since gio doesn't handle well monitoring files in non-existing
directories (it polls every other second), this should avoid unnecessary
wakeups.

https://bugzilla.gnome.org/show_bug.cgi?id=580357